updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /backend/node_modules
 /frontend/node_modules
 /backend/.pnp
-/backend.pnp.js
+/backend/.pnp.js
 
 /frontend/.pnp
 /frontend/.pnp.js
