modified homePage as LoginPage, updated Login.js and signup.js

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://healer:healer123@cluster0.9zlk6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=friends_zone_jk
