--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix ../frontend && npm run build --prefix ../frontend"
+    "build": "cd ../frontend && npm install --legacy-peer-deps && npm run build && cd ../backend && npm install --legacy-peer-deps && npm run build"
   },
   "author": "jagadeesh kumar",
   "license": "ISC",
