--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ PORT=5000
 MONGO_URI=mongodb+srv://healer:healer123@cluster0.9zlk6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=friends_zone_jk
 NODE_ENV=production
+FRONTEND_URL=https://friends-zone-chat-app.onrender.com
